Configured Database Interactions

--- a/Market.Auth/appsettings.json
+++ b/Market.Auth/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Market.Auth": "Data Source=(LocalDB)\\MSSQLLocalDB;Database=Market.Auth;Integrated Security=true;"
+    "Market.Auth": "Data Source=localhost;Database=Market.Auth;Integrated Security=true;Trust Server Certificate=true;"
   },
   "Logging": {
     "LogLevel": {
