--- a/Market.Auth.Application/Market.Auth.Application.csproj
+++ b/Market.Auth.Application/Market.Auth.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
@@ -16,6 +17,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Market.Auth.DataAccess\Market.Auth.DataAccess.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\AccountService\Dto\" />
   </ItemGroup>
 
 </Project>
